deployments/l2geth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: l2geth-svc
spec:
  selector:
    app: l2geth
  ports:
    - name: rpc
      port: 8545
      targetPort: 8545
    - name: websocket
      port: 8546
      targetPort: 8546
    - name: metric
      port: 6060
      targetPort: 6060
