deployments/l2geth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: l2geth-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - host: l2geth.local.tokamak.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: l2geth-svc
            port:
              number: 8545
